--- a/styles.css
+++ b/styles.css
@@ -224,3 +224,32 @@ body {
         align-items: center;
     }
 }
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #ffffff;
+    line-height: 1.6;
+}
+
+.profile-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.profile-photo {
+    margin-top: 500px;
+    width: 100%;
+    max-height: 400px;
+    object-fit:contain;
+    border-radius: 10px;
+}
+
+.bio-section {
+    margin-top: 100px;
+    background-color: rgba(36, 35, 35, 0.445);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+}
